<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nguyen.mytasks.DetailActivity">
    <TextView
        android:id="@+id/task_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/task_label"
        android:textColor="@android:color/holo_blue_dark"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_marginTop="@dimen/text_top_margin"/>
    <EditText
        android:id="@+id/task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/task_label"
        android:maxLines="1"
        android:layout_marginLeft="@dimen/text_horizontal_margin"
        android:layout_marginRight="@dimen/text_horizontal_margin"/>
    <TextView
        android:id="@+id/due_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/task_name"
        android:text="@string/due_label"
        android:textColor="@android:color/holo_blue_dark"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_marginTop="@dimen/text_top_margin"/>
    <TextView
        android:id="@+id/due_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/due_label"
        android:layout_toLeftOf="@+id/date_picker"
        android:layout_marginLeft="@dimen/text_horizontal_margin"
        android:layout_marginRight="@dimen/text_horizontal_margin"/>
    <ImageButton
        android:id="@+id/date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/due_label"
        android:layout_alignParentRight="true"
        android:background="@android:color/transparent"
        android:src="@drawable/date_picker_button"/>
    <View
        android:id="@+id/due_date_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/due_date"
        android:layout_toLeftOf="@id/date_picker"
        android:layout_alignLeft="@id/due_date"
        android:layout_alignRight="@id/due_date"
        android:layout_marginBottom="@dimen/text_bottom_margin"
        android:background="#000000"/>
    <TextView
        android:id="@+id/due_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/due_date_separator"
        android:layout_toLeftOf="@+id/time_picker"
        android:layout_marginLeft="@dimen/text_horizontal_margin"
        android:layout_marginRight="@dimen/text_horizontal_margin"/>
    <ImageButton
        android:id="@+id/time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/due_date_separator"
        android:layout_alignParentRight="true"
        android:background="@android:color/transparent"
        android:src="@drawable/time_picker_button"/>
    <View
        android:id="@+id/due_time_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/due_time"
        android:layout_toLeftOf="@id/time_picker"
        android:layout_alignLeft="@id/due_time"
        android:layout_alignRight="@id/due_time"
        android:layout_marginBottom="@dimen/text_bottom_margin"
        android:background="#000000"/>
    <TextView
        android:id="@+id/priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/due_time_separator"
        android:text="@string/priority_label"
        android:textColor="@android:color/holo_blue_dark"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_marginTop="@dimen/text_top_margin"/>
    <Spinner
        android:id="@+id/priority_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/priority"
        android:layout_below="@+id/priority"
        android:layout_marginLeft="@dimen/text_horizontal_margin">
    </Spinner>
    <TextView
        android:id="@+id/note_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/priority_spinner"
        android:text="@string/note_label"
        android:textColor="@android:color/holo_blue_dark"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_marginTop="@dimen/text_top_margin"/>
    <EditText
        android:id="@+id/note_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/note_label"
        android:maxLines="1"
        android:layout_marginLeft="@dimen/text_horizontal_margin"/>
    <Button
        android:id="@+id/save"
        android:text="@string/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/note_text"
        android:layout_marginTop="@dimen/text_top_margin"/>
    <Button
        android:id="@+id/cancel"
        android:text="@string/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/note_text"
        android:layout_toRightOf="@id/save"
        android:layout_marginTop="@dimen/text_top_margin"/>
</RelativeLayout>
